--- a/app/package.json
+++ b/app/package.json
@@ -12,9 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.8.3",
+    "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.39",
+    "@material-ui/pickers": "^3.2.9",
     "axios": "^0.19.1",
+    "date-fns": "^2.9.0",
     "next": "^9.1.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
