--- a/app/package.json
+++ b/app/package.json
@@ -21,7 +21,8 @@
     "date-fns": "^2.9.0",
     "next": "^9.1.7",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-easy-crop": "^2.0.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
