--- a/app/package.json
+++ b/app/package.json
@@ -18,10 +18,16 @@
     "@material-ui/lab": "^4.0.0-alpha.39",
     "@material-ui/pickers": "^3.2.9",
     "axios": "^0.19.1",
-    "date-fns": "^2.9.0",
+    "css-loader": "^3.4.2",
+    "file-loader": "^5.0.2",
     "next": "^9.1.7",
+    "pure-react-carousel": "^1.24.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-slick": "^0.25.2",
+    "slick-carousel": "^1.8.1",
+    "style-loader": "^1.1.3",
+    "url-loader": "^3.0.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
