--- a/app/package.json
+++ b/app/package.json
@@ -66,7 +66,8 @@
     "rules": {
       "react/react-in-jsx-scope": "off",
       "react/prop-types": "off",
-      "react/jsx-one-expression-per-line": "warn"
+      "react/jsx-one-expression-per-line": "warn",
+      "no-bitwise": "off"
     }
   }
 }
