--- a/app/package.json
+++ b/app/package.json
@@ -24,7 +24,8 @@
     "pure-react-carousel": "^1.24.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-easy-crop": "^2.0.0"
+    "react-easy-crop": "^2.0.0",
+    "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
