--- a/app/package.json
+++ b/app/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 80",
     "lint": "eslint src/**/*.jsx src/**/*.js"
   },
   "author": "",
